Faster lazy loading on the serverside for sparse queries

--- a/peanut/photos/templates/photos/search_webview.html
+++ b/peanut/photos/templates/photos/search_webview.html
@@ -31,7 +31,7 @@
 		font-family: arial;
 		font-size: 1em;
 		padding: 4px 0px 4px 10px;
-		background-color: #F0F0F0;
+		background-color: rgba(239, 239, 239, 0.3);
 	}
 	.ui-image {
 		padding-right: 2px;
@@ -91,13 +91,11 @@
 		float: left;
 		margin: 0px 0px 0px 0px;
 		width: 100%;
-		border-top: 1px solid rgb(241,155,43);
+		border-top: 1px solid rgb(239, 239, 239);
 		font-size: 10px;
-		text-align: right;
+		text-align: left;
 	}
 	#stats{
-		text-align: right;
-		font-size: 10px;
 	}
 	a:link{
 		text-decoration: none;
